@@ -1,1 +1,2 @@
+    * Sending and logging connection information
     * Autotools-based build system [mawis]
